# aerolineas-rusticas

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cert.pem  compose.yaml  custom.csr  custom.key  custom.pem  docker_tutorial.md  node_ips.csv  server.key  users.csv
.github/workflows/: ci.yml  docs.yml
client/: Cargo.toml
client/src/: cli.rs  conn_holder.rs  lib.rs
data/: Cargo.toml
data/src/: col_data.rs  countries.rs  lib.rs  protocol_result.rs  traits.rs
data/src/airports/: airp.rs  mod.rs  types.rs
data/src/continents/: types.rs
data/src/flights/: flight.rs  mod.rs  states.rs  types.rs
data/src/tracking/: live_flight_data.rs
data/src/utils/: distances.rs  paths.rs  strings.rs
datasets/airports/: cut_airports.csv
docker/: add.bat  add.sh  remove.bat  remove.sh
docker/compose/: networks.yaml  nodo_10.yaml  nodo_11.yaml  nodo_12.yaml  nodo_13.yaml  nodo_14.yaml  nodo_base.yaml
docker/full/: Dockerfile
docker/nd/: Dockerfile
docker/nd-slim/: Dockerfile
interface/: Cargo.toml
interface/src/: app.rs  lib.rs  run.rs
interface/src/data/: app_details.rs  mod.rs  widget_details.rs
interface/src/panels/: crud.rs  show.rs
interface/src/plugins/: mod.rs  utils.rs
interface/src/plugins/airports/: clicker.rs  drawer.rs  loader.rs  mod.rs
interface/src/plugins/flights/: loader.rs  mod.rs  updater.rs
interface/src/utils/: distances.rs  mod.rs  util.rs
interface/src/windows/: airp.rs  flight_editor.rs  util.rs
logger/: Cargo.toml
logger/src/: lib.rs  log.rs
media/flights/: flights_config.json
parser/: Cargo.toml
parser/src/: assignment.rs  lib.rs  main_parser.rs  primary_key.rs  table_name.rs
parser/src/data_types/: constant.rs  keyspace_name.rs  quoted_name.rs  term.rs  unquoted_name.rs
parser/src/statements/: login_user_statement.rs  mod.rs  startup_statement.rs  statement.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  traits.rs  utils.rs
protocol/src/aliases/: results.rs  types.rs
protocol/src/errors/: error.rs  write_type.rs
protocol/src/headers/: flags.rs  length.rs  msg_headers.rs  opcode.rs  stream.rs  version.rs
protocol/src/notations/: consistency.rs  mod.rs  value.rs
scripts/: tables.cql
scripts/init/: ks.cql  login.cql  tables.cql
server/: Cargo.toml
server/src/: lib.rs  modes.rs  utils.rs
server/src/cql_frame/: frame.rs  query_body.rs
server/src/nodes/: graph.rs  internal_threads.rs  mod.rs  node.rs  port_type.rs  session_handler.rs  utils.rs
server/src/nodes/actions/: opcode.rs
server/src/nodes/addr/: loader.rs
server/src/nodes/disk_operations/: disk_handler.rs  row_operations.rs  table_operations.rs  table_path.rs
server/src/nodes/keyspace_metadata/: keyspace.rs  mod.rs  replication_strategy.rs
server/src/nodes/states/: application.rs  appstatus.rs  endpoints.rs  heartbeat.rs  mod.rs
server/src/nodes/table_metadata/: column_config.rs  column_data_type.rs  mod.rs  table.rs
server/src/pool/: job.rs  threadpool.rs  worker.rs
simulator/: Cargo.toml
simulator/src/: cli.rs  connection.rs  flight_simulator.rs  initializer.rs  lib.rs  sender.rs  sim_tests.rs  updater.rs  utils.rs
src/: lib.rs  main.rs
src/cassandra/: mod.rs  traits.rs  utils.rs
src/cassandra/aliases/: mod.rs  results.rs  types.rs
src/cassandra/errors/: error.rs  mod.rs  write_type.rs
src/cassandra/headers/: flags.rs  length.rs  mod.rs  opcode.rs  stream.rs  version.rs
src/cassandra/messages/: mod.rs
src/cassandra/notations/: consistency.rs  mod.rs
src/cassandra/user/: mod.rs  udt_type.rs
src/client/: cli.rs  col_data.rs  conn_holder.rs  frame.rs  mod.rs  protocol_result.rs
src/client/cql_frame/: ddl_body.rs  frame.rs  mod.rs  query_body.rs
src/data/: airport_types.rs  airports.rs  continent_types.rs  countries.rs  flights.rs  mod.rs  regions.rs
src/data/airports/: airp.rs  mod.rs  types.rs
src/data/continents/: mod.rs  types.rs
src/data/flights/: departing.rs  flight.rs  flight_type.rs  incoming.rs  mod.rs  states.rs  traits.rs  types.rs
src/data/tracking/: live_flight_data.rs  mod.rs
src/data/utils/: distances.rs  mod.rs  paths.rs  strings.rs
src/interface/: app.rs  mod.rs  run.rs  utils.rs
src/interface/data/: airports_details.rs  app_details.rs  login_info.rs  mod.rs  widget_details.rs
src/interface/map/: local_tiles.rs  mod.rs  panels.rs  providers.rs  windows.rs
src/interface/panels/: crud.rs  show.rs
src/interface/plugins/: mod.rs  utils.rs
src/interface/windows/: airp.rs  airport_details.rs  flight_editor.rs  mod.rs  util.rs
src/parser/: and.rs  assignment.rs  column_definition.rs  constant.rs  delete.rs  expression.rs  group_by.rs  identifier.rs  insert.rs  limit.rs  main_parser.rs  mod.rs  operator.rs  option.rs  order_by.rs  per_partition_limit.rs  primary_key.rs  relation.rs  select.rs  selector.rs  set_parameter.rs  table_name.rs  update.rs  where.rs
src/parser/data_types/: collection_literal.rs  collection_type.rs  constant.rs  constants.rs  cql_type.rs  float.rs  function_call.rs  identifier.rs  integer.rs  keyspace_name.rs  list_literal.rs  literal.rs  map_literal.rs  mod.rs  native_types.rs  option.rs  quoted_identifier.rs  quoted_name.rs  set_literal.rs  term.rs  tuple_literal.rs  tuple_type.rs  type_hint.rs  udt_literal.rs  unquoted_identifier.rs  unquoted_name.rs  user_defined_type.rs  vector_literal.rs
src/parser/statements/: collection.rs  constants.rs  cql_type.rs  ddl_statement.rs  dml_statement.rs  (+12 more)
src/protocol/: mod.rs  traits.rs  utils.rs
src/server/: mod.rs  modes.rs  sv.rs  sv_modes.rs  traits.rs  utils.rs
src/simulator/: cli.rs  connection.rs  flight_simulator.rs  initializer.rs  mod.rs  sender.rs  sim_tests.rs  updater.rs  utils.rs
src/tokenizer/: mod.rs  tokenizer.rs
templates/issues/: bug_report_template.md
templates/pull_requests/: pr_template.md
tests/: Cargo.toml  client_nodes_connection.rs  common.rs  insert_and_select.rs  simulator_runs.rs  test_simple_connection.rs
tests/common/: mod.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
utils/: Cargo.toml
utils/src/: get_root_path.rs  lib.rs
(+237 files in other folders)
