[workspace]
members = [
    # librerías
    "client",
    "data",
    "interface",
    "logger",
    "parser",
    "protocol",
    "server",
    "simulator",
    "tokenizer",

    # tests de integración
    "tests"
]
# Necesario para que bien compatible con la edición 2021.
# Por defecto es el "1", que confunde a Rust después.
resolver = "2"


[workspace.package]
authors = [
    "Franco Lighterman Reismann",
    "Matias Mendiola",
    "Francisco Antonio Pereyra",
    "Victor Cipriano"
]
edition = "2021"