[package]
name = "client"
version = "0.5.0"
authors.workspace = true
edition.workspace = true

[dependencies]
data = { path = "../data" }
parser = { path = "../parser" }
protocol = { path = "../protocol" }
rustls = { version = "0.22.4" }
server = { path = "../server" }
tokenizer = { path = "../tokenizer" }