[package]
name = "client"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
default-run = "cli"

[dependencies]
data = { path = "../data" }
parser = { path = "../parser" }
protocol = { path = "../protocol" }
rustls = { version = "0.22.4" }
server = { path = "../server" }
tokenizer = { path = "../tokenizer" }
utils = { path = "../utils" }

[[bin]]
name = "cli"
path = "./src/bin/cli.rs"
test = true
doctest = true
doc = true