[package]
name = "data"
version = "0.5.0"
edition = "2021"

[features]
# Dependencias a usarse sólamente cuando la interfaz usa este crate.
gui = ["dep:eframe", "dep:walkers"]

[dependencies]
chrono = { version = "0.4.38" }
eframe = { version = "=0.29.1", optional = true }
protocol = { path = "../protocol" }
walkers = { version = "=0.25.0", optional = true }