[package]
name = "interface"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
default-run = "gui"

[dependencies]
chrono = { version = "0.4.38" }
client = { path = "../client" }
data = { path = "../data" }
eframe = { version = "=0.29.1" }
egui_extras = { version = "0.29.1", features = ["image", "datepicker"] }
image = { version = "0.25.4", features = ["png"] }
protocol = { path = "../protocol" }
walkers = { version = "=0.25.0" }

[[bin]]
name = "gui"
path = "./src/bin/gui.rs"
test = true
doctest = true
doc = true