[package]
name = "server"
version = "0.5.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" }
parser = { path = "../parser" }
protocol = { path = "../protocol" }
rand = { version = "0.8.5" }
rustls = { version = "0.22.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizer = { path = "../tokenizer" }