[package]
name = "server"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
default-run = "sv"

[dependencies]
chrono = { version = "0.4.38" }
logger = { path = "../logger" }
parser = { path = "../parser" }
protocol = { path = "../protocol" }
rand = { version = "0.8.5" }
rustls = { version = "0.22.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizer = { path = "../tokenizer" }
utils = { path = "../utils" }

[[bin]]
name = "sv"
path = "./src/bin/sv.rs"
test = true
doctest = true
doc = true

[[bin]]
name = "nd"
path = "./src/bin/nd.rs"
test = true
doctest = true
doc = true