[package]
name = "simulator"
version = "0.5.0"
authors.workspace = true
edition.workspace = true

[dependencies]
client = { path = "../client" }
data = { path = "../data" }
protocol = { path = "../protocol" }
rand = { version = "0.8.5" }
serde = { version = "1.0", features = ["derive"] }
server = { path = "../server" }